[project]
name = "payment-fraud-risk"
version = "1.0"
description = "Fraud risk prediction program with XGBoost and SHAP explanations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "xgboost",
  "shap",
  "joblib",
  "pyyaml",
  "matplotlib"
]

[tool.setuptools]
packages = ["src"]
